@@ -1,5 +1,10 @@
 2014-07-08  Richard Biener  <rguenther@suse.de>
 
+	PR tree-optimization/61681
+	* gcc.dg/torture/pr61681.c: New testcase.
+
+2014-07-08  Richard Biener  <rguenther@suse.de>
+
 	PR tree-optimization/61680
 	* gcc.dg/vect/pr61680.c: New testcase.
 
