@@ -1,5 +1,11 @@
 2014-07-08  Richard Biener  <rguenther@suse.de>
 
+	PR tree-optimization/61681
+	* tree-ssa-structalias.c (find_what_var_points_to): Expand
+	NONLOCAL inside ESCAPED.
+
+2014-07-08  Richard Biener  <rguenther@suse.de>
+
 	PR tree-optimization/61680
 	* tree-vect-data-refs.c (vect_analyze_data_ref_dependence):
 	Handle properly all read-write dependences with group accesses.
